<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
-->
    <item
        android:id="@+id/home"
        android:orderInCategory="30"
        android:showAsAction="always"
        android:icon="@drawable/home"
        android:title="@string/menu_bookstore"
        android:scaleType="fitCenter" />
    
    <item
        android:id="@+id/category"
        android:orderInCategory="40"
        android:showAsAction="always"
        android:icon="@drawable/category"
        android:title="@string/menu_category"
        android:scaleType="fitCenter" />
    
    <item
        android:id="@+id/bookshelf"
        android:orderInCategory="50"
        android:showAsAction="always"
        android:icon="@drawable/bookshelf"
        android:title="@string/menu_bookshelf"
        android:scaleType="fitCenter" />
<!--     
    <item
        android:id="@+id/login_out"
        android:orderInCategory="60"
        android:showAsAction="always"
        android:icon="@drawable/login"
        android:title="@string/menu_login"
        android:scaleType="fitCenter" /> 

    <item
        android:id="@+id/settings"
        android:orderInCategory="70"
        android:showAsAction="always"
        android:title="@string/settings"
        android:icon="@drawable/setting" />
-->     
    <item android:id="@+id/search"
          android:title="@string/menu_searchhint"
          android:icon="@drawable/search"
          android:orderInCategory="80"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    
    
</menu>